# c-study

./: CMakeLists.txt
doc/: Writer.odt
test/: AscII-int.cpp  CMakeLists.txt  Fibonacci.cpp  N-jiecheng.cpp  add-str.cpp  break_test.cpp  change-type.cpp  com-max-test.cpp  comp_str.cpp  constant.cpp  continue-test.cpp  cout-matrix-test1.cpp  cout-matrix-test2.cpp  cout-matrix.cpp  cout-test.cpp  equation-xjtest.cpp  equation.cpp  example-test.cpp  func-inline.cpp  func-max.cpp  func-request.cpp  func-test.cpp  gradient-method.cpp  hello-world.cpp  max-array.cpp  max-test.cpp  max-value.cpp  max1-test.cpp  number-max.cpp  qp-sorted.cpp  shuzu-test.cpp  sum-test.cpp  trangle_area.cpp  two-shuzu.cpp  zhizhen-func.cpp  zhizhen-test1.cpp  zhizhen-test2.cpp
