if(HAVE_CGAL)
    add_executable(CGAL_test CGAL_test.cpp)
    target_link_libraries(CGAL_test  ${CGAL_LIBRARIES})
endif()

add_executable(hello-world hello-world.cpp)
add_executable(max1-test max1-test.cpp)
add_executable(example-test example-test.cpp)
add_executable(AscII-int AscII-int.cpp)
add_executable(add-str add-str.cpp)
add_executable(constant constant.cpp)
add_executable(change-type change-type.cpp)
add_executable(cout-test cout-test.cpp)
add_executable(equation equation.cpp)
add_executable(trangle_area trangle_area.cpp)
add_executable(comp_str comp_str.cpp)
